Serialize immutable Template recipe graphs
Template companions now round-trip with graph-wide identity and independent recipe replay while the stream contains no Builders, ConstructionSessions, or mutable recipe containers. Invalid captured graphs still fail during Template materialization.